# carx

./: CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  cars.md  conanfile.txt
filament-demo/: CMakeLists.txt  main.cpp
src/: app.hpp  main.cpp  render.hpp  window.hpp
src/core/: track.hpp  vehicle.hpp
src/systems/render/: renderable.hpp  scene.cpp  scene.hpp  track_view.hpp  vehicle_view.hpp
src/utilities/: spline2d_generator.h
tests/: spline2d_generator_tests.cpp
